package Parking;

public class InvalidParkingTicketException extends Exception {
    public InvalidParkingTicketException(String message) {
        super(message);
    }
}
