package Parking;

public enum ParkingSpotType {
    MOTORCYCLE, COMPACT, LARGE
}
