import Vehicles.Vehicle;

public class ParkingLotFacade {
    private IParkingLevel levels;

    Ticket parkVehicle(Vehicle v, IParkingLevel l){

    }
}
