package Payment;

public interface PaymentCalculation {
    double calculatePaymentSum(ParkingTicket parkingTicket);
}
