package Payments;

public class CashPayment {
}
