package Payments;

public class CreditCardPayment {
}
