package Users;

public class Admin {
}
