package Vehicles;

public enum VehicleType {
    CAR,
    TRUCK,
    MOTORCYCLE
}
